<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gitlab</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Different used Strings -->
    <string name="image">Image</string>

    <!-- Wizard Strings -->
    <string name="tryit">Try Gitlab for Android</string>
    <string name="signin">Sign In</string>

    <!-- Sign In Strings -->
    <string name="gitlab_url_label">Gitlab URL (SSL preferred)</string>
    <string name="gitlab_url_hint">e.g http://demo.gitlab.com/</string>
    <string name="gitlab_email_label">E-Mail</string>
    <string name="gitlab_email_hint">e.g john@doe.com</string>
    <string name="gitlab_password_label">Password</string>
    <string name="gitlab_password_hint">required</string>
    <string name="show_password">Show password</string>
    <string name="url_invalid">Gitlab URL is invalid</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_invalid">Password is invalid</string>

    <!-- Crouton Strings -->
    <string name="crouton_login_wrong">URL, Email and/or Password wrong.</string>

    <!-- Navigation Drawer Strings -->
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>

    <string-array name="navigation_drawer_strings">
        <item>Dashboard</item>
        <item>Projects</item>
        <item>Issues</item>
        <item>Merge Requests</item>
        <item>Snippets</item>
        <item>Profile</item>
    </string-array>

    <string-array name="navigation_drawer_icons">
        <item>@drawable/ic_menu_dashboard</item>
        <item>@drawable/ic_menu_projects</item>
        <item>@drawable/ic_menu_issues</item>
        <item>@drawable/ic_menu_merge_request</item>
        <item>@drawable/ic_menu_snippets</item>
        <item>@drawable/ic_menu_profile</item>
    </string-array>

</resources>
