<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/gitlab_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/signin"
        android:padding="8dp" />

    <Button
        android:id="@+id/tryit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/tryit" />

</RelativeLayout>